fixed docker file

--- a/nextjs-app/Dockerfile
+++ b/nextjs-app/Dockerfile
@@ -31,7 +31,7 @@ RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 nextjs
 
 # Copy built application
-COPY --from=builder /app/public ./public
+# In Next.js standalone mode, public directory is included in .next/standalone if it exists
 COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
 COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
 
