Update Dockerfile to include additional dependencies for audio processing, enhancing build capabilities with necessary libraries and tools.

--- a/python-worker/Dockerfile
+++ b/python-worker/Dockerfile
@@ -5,6 +5,18 @@ FROM python:3.11-slim
 RUN apt-get update && apt-get install -y \
     ffmpeg \
     libsndfile1 \
+    pkg-config \
+    build-essential \
+    gcc \
+    g++ \
+    make \
+    libavcodec-dev \
+    libavformat-dev \
+    libavutil-dev \
+    libavdevice-dev \
+    libavfilter-dev \
+    libswscale-dev \
+    libswresample-dev \
     && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
