Update Dockerfile to install FFmpeg 4.4 from source for PyAV compatibility and remove unnecessary av library from requirements.

--- a/python-worker/Dockerfile
+++ b/python-worker/Dockerfile
@@ -2,22 +2,41 @@
 FROM python:3.11-slim
 
 # Install system dependencies
+# Note: We need FFmpeg 4.x for PyAV 11.x compatibility (required by faster-whisper)
 RUN apt-get update && apt-get install -y \
-    ffmpeg \
+    wget \
+    xz-utils \
+    yasm \
+    nasm \
     libsndfile1 \
     pkg-config \
     build-essential \
     gcc \
     g++ \
     make \
-    libavcodec-dev \
-    libavformat-dev \
-    libavutil-dev \
-    libavdevice-dev \
-    libavfilter-dev \
-    libswscale-dev \
-    libswresample-dev \
+    autoconf \
+    automake \
+    libtool \
     && rm -rf /var/lib/apt/lists/*
+
+# Install FFmpeg 4.4 from source (compatible with PyAV 11.x)
+# This installs both runtime and development files to /usr/local
+RUN cd /tmp && \
+    wget https://ffmpeg.org/releases/ffmpeg-4.4.tar.xz && \
+    tar -xf ffmpeg-4.4.tar.xz && \
+    cd ffmpeg-4.4 && \
+    ./configure --prefix=/usr/local \
+        --enable-shared \
+        --disable-static \
+        --disable-debug \
+        --disable-doc \
+        --enable-pic && \
+    make -j$(nproc) && \
+    make install && \
+    ldconfig && \
+    cd / && \
+    rm -rf /tmp/ffmpeg-4.4* && \
+    ffmpeg -version
 
 WORKDIR /app
 
