Enhance environment variable management for HuggingFace integration in Docker and Python worker. Update docker-compose.yml to include HUGGINGFACE_TOKEN and HUGGINGFACE_HUB_TOKEN. Modify processor.py and worker.py to support both HUGGINGFACE_TOKEN and HF_TOKEN, improving compatibility and error handling. Update Tailwind CSS configuration and global styles for improved UI consistency.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,9 @@ services:
     environment:
       - MONGODB_URI=mongodb://mongo:27017/speaker_db
       - STORAGE_PATH=/app/storage
+      - HUGGINGFACE_TOKEN=${HUGGINGFACE_TOKEN}
       - HF_TOKEN=${HUGGINGFACE_TOKEN}
+      - HUGGINGFACE_HUB_TOKEN=${HUGGINGFACE_TOKEN}
       - OMP_NUM_THREADS=4
       - MKL_NUM_THREADS=4
     volumes:
