Update .env.example and docker-compose.yml to introduce DOMAIN variable for Traefik routing. This change enhances flexibility in service configuration by allowing dynamic domain usage in routing rules.

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,9 @@ MONGODB_URI=mongodb://mongo:27017/speaker_db
 NEXTAUTH_SECRET=your_random_secret_here
 NEXTAUTH_URL=http://localhost:3001
 
+# Domain for Traefik routing (used in Dokploy)
+DOMAIN=your-domain.com
+
 # Storage
 STORAGE_PATH=/app/storage
 
