Update .env.example and QUICKSTART.md to reflect changes in MongoDB URI, storage path, and system setup instructions. Introduce new optional Python worker thread configurations and streamline deployment steps for improved clarity and usability.

--- a/.env.example
+++ b/.env.example
@@ -2,18 +2,19 @@
 HUGGINGFACE_TOKEN=your_hf_token_here
 
 # MongoDB
-MONGODB_URI=mongodb://mongo:27017/speaker_db
+MONGODB_URI=mongodb://localhost:27017/speaker_db
 
 # NextAuth (for authentication)
 NEXTAUTH_SECRET=your_random_secret_here
 NEXTAUTH_URL=http://localhost:3001
 
-# Domain for Traefik routing (used in Dokploy)
-DOMAIN=your-domain.com
-
-# Storage
-STORAGE_PATH=/app/storage
+# Storage (relative path from project root, or absolute path)
+STORAGE_PATH=./storage
 
 # Node Environment
 NODE_ENV=production
+
+# Python Worker Thread Configuration (optional)
+OMP_NUM_THREADS=4
+MKL_NUM_THREADS=4
 
