--- a/.env.example
+++ b/.env.example
@@ -2,19 +2,15 @@
 HUGGINGFACE_TOKEN=your_hf_token_here
 
 # MongoDB
-MONGODB_URI=mongodb://localhost:27017/speaker_db
+MONGODB_URI=mongodb://mongo:27017/speaker_db
 
 # NextAuth (for authentication)
 NEXTAUTH_SECRET=your_random_secret_here
 NEXTAUTH_URL=http://localhost:3001
 
-# Storage (relative path from project root, or absolute path)
-STORAGE_PATH=./storage
+# Storage
+STORAGE_PATH=/app/storage
 
 # Node Environment
 NODE_ENV=production
-
-# Python Worker Thread Configuration (optional)
-OMP_NUM_THREADS=4
-MKL_NUM_THREADS=4
 
