Add WHISPER_LANGUAGE support for language locking in transcription
- Updated docker-compose.yml to include WHISPER_LANGUAGE environment variable for language locking.
- Enhanced README.md with instructions on setting WHISPER_LANGUAGE for specific language transcription.
- Modified upload and reprocess routes to handle language input and preserve language settings.
- Updated AudioProcessor to utilize language settings from jobs and recordings, with fallback to environment variable.
- Added language selection dropdown in the upload page for user-friendly language locking options.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,7 @@ services:
       - HUGGINGFACE_TOKEN=${HUGGINGFACE_TOKEN}
       - HF_TOKEN=${HUGGINGFACE_TOKEN}
       - HUGGINGFACE_HUB_TOKEN=${HUGGINGFACE_TOKEN}
+      - WHISPER_LANGUAGE=${WHISPER_LANGUAGE:-}
       - OMP_NUM_THREADS=5
       - MKL_NUM_THREADS=5
     volumes:
