Enhance performance tuning options in environment configuration
- Added new environment variables for Whisper performance tuning in .env.example and docker-compose.yml.
- Updated QUICKSTART.md and README.md with instructions for optional performance overrides.
- Modified AudioProcessor to utilize new environment variables for CPU threads, model name, device, compute type, and transcription parameters.

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,20 @@ STORAGE_PATH=/app/storage
 # Node Environment
 NODE_ENV=production
 
+# Whisper language lock (optional)
+WHISPER_LANGUAGE=
+
+# Performance tuning (optional overrides)
+AUDIO_PROCESSOR_CPU_THREADS=4
+WHISPER_CPU_THREADS=4
+WHISPER_MODEL_NAME=base
+WHISPER_DEVICE=cpu
+WHISPER_COMPUTE_TYPE=int8
+WHISPER_BEAM_SIZE=1
+WHISPER_BEST_OF=1
+WHISPER_VAD_FILTER=true
+
+# BLAS threading (optional)
+OMP_NUM_THREADS=5
+MKL_NUM_THREADS=5
+
