--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,8 +35,16 @@ services:
       - HF_TOKEN=${HUGGINGFACE_TOKEN}
       - HUGGINGFACE_HUB_TOKEN=${HUGGINGFACE_TOKEN}
       - WHISPER_LANGUAGE=${WHISPER_LANGUAGE:-}
-      - OMP_NUM_THREADS=5
-      - MKL_NUM_THREADS=5
+      - AUDIO_PROCESSOR_CPU_THREADS=${AUDIO_PROCESSOR_CPU_THREADS:-4}
+      - WHISPER_CPU_THREADS=${WHISPER_CPU_THREADS:-4}
+      - WHISPER_MODEL_NAME=${WHISPER_MODEL_NAME:-base}
+      - WHISPER_DEVICE=${WHISPER_DEVICE:-cpu}
+      - WHISPER_COMPUTE_TYPE=${WHISPER_COMPUTE_TYPE:-int8}
+      - WHISPER_BEAM_SIZE=${WHISPER_BEAM_SIZE:-1}
+      - WHISPER_BEST_OF=${WHISPER_BEST_OF:-1}
+      - WHISPER_VAD_FILTER=${WHISPER_VAD_FILTER:-true}
+      - OMP_NUM_THREADS=${OMP_NUM_THREADS:-5}
+      - MKL_NUM_THREADS=${MKL_NUM_THREADS:-5}
     volumes:
       - audio-storage:/app/storage
       - models-cache:/root/.cache
